--- a/README
+++ b/README
@@ -17,3 +17,14 @@ c)支持限速
 #3.传输层
 a)协商密钥
 
+
+
+
+# client模式
+./fgfw --mode=client --serv_ip=127.0.0.1 --port_list=40000,40001 --local_agent_port_list=30000
+# server模式
+./fgfw --mode=server --serv_ip=127.0.0.1 --port_list=40000,40001
+
+# 测试
+./fgfw --testbench=30000 --mode=server
+./fgfw --testbench=30000 --mode=client
