修改vacc_host_read()接口，允许指定接收buf

--- a/README
+++ b/README
@@ -30,5 +30,5 @@ a)协商密钥
 ./fgfw --mode=server --serv_ip=127.0.0.1 --tunnel_default_key=0x1234abcd5678ef9097530864ace345bf --port_list=40000,40001,50002,50003 --transport_send_bps=100000
 
 # 测试
-./fgfw --testbench=0 --mode=server --local_agent_port_list=3000
-./fgfw --testbench=0 --mode=client --local_agent_port_list=3000 --len=10000000
+./rottenNut --testbench=0 --mode=server --local_agent_port_list=3000
+./rottenNut --testbench=0 --mode=client --local_agent_port_list=3000 --len=10000000
