--- a/README
+++ b/README
@@ -25,9 +25,9 @@ a)协商密钥
 
 
 # client模式
-./fgfw --mode=client --serv_ip=127.0.0.1 --tunnel_default_key=0x1234abcd5678ef9097530864ace345bf --port_list=40000,40001,50002,50003 --transport_send_bps=100000 --local_agent_port_list=3000 --port_agent_offset=1
+./rottenNut --mode=client --serv_ip=127.0.0.1 --tunnel_default_key=0x1234abcd5678ef9097530864ace345bf --port_list=40000,40001,50002,50003 --transport_send_bps=100000 --local_agent_port_list=3000 --port_agent_offset=1
 # server模式
-./fgfw --mode=server --serv_ip=127.0.0.1 --tunnel_default_key=0x1234abcd5678ef9097530864ace345bf --port_list=40000,40001,50002,50003 --transport_send_bps=100000
+./rottenNut --mode=server --serv_ip=127.0.0.1 --tunnel_default_key=0x1234abcd5678ef9097530864ace345bf --port_list=40000,40001,50002,50003 --transport_send_bps=100000
 
 # 测试
 ./rottenNut --testbench=0 --mode=server --local_agent_port_list=3000
