解决控制报文发送受限速影响问题 send fifo留出一定配额用于控制报文，控制报文发送不消耗令牌

--- a/README
+++ b/README
@@ -26,8 +26,10 @@ a)协商密钥
 
 # client模式
 ./rottenNut --mode=client --serv_ip=127.0.0.1 --tunnel_default_key=0x1234abcd5678ef9097530864ace345bf --port_list=40000,40001,50002,50003 --transport_send_bps=100000 --local_agent_port_list=3000 --port_agent_offset=1
+./rottenNut --mode=client --serv_ip=127.0.0.1 --port_list=40000,40001,50002,50003 --transport_send_bps=100000 --local_agent_port_list=3000 --port_agent_offset=1
 # server模式
 ./rottenNut --mode=server --serv_ip=127.0.0.1 --tunnel_default_key=0x1234abcd5678ef9097530864ace345bf --port_list=40000,40001,50002,50003 --transport_send_bps=100000
+./rottenNut --mode=server --serv_ip=127.0.0.1 --port_list=40000,40001,50002,50003 --transport_send_bps=100000
 
 # 测试
 ./rottenNut --testbench=0 --mode=server --local_agent_port_list=3000
