1.testbench改造,直接使用rn_socket_mngr_t封装，不再直接调用vacc_host 2.修复epoll_worker问题，对于一次epoll得到的fd，如果已经从epoll中移除则不再触发回调 3.增加统计计数 4.控制报文将触发send_fifo排空操作，避免控制报文被堵塞 5.epoll_wait获取到的ready fd列表，需要针对可能的关闭操作做清理，避免调用到关闭后又重新开启的fd。同时增加epoll添加删除重复检查 6.vacc_host使用非阻塞socket，同时增加重复destroy检查

--- a/README
+++ b/README
@@ -34,5 +34,18 @@ a)协商密钥
 8.218.56.30
 
 # 测试
+--mode=server
+--testbench=0:
+普通server模式,接收报文并反弹
+--testbench=1:
+接收连接,会弹报文,随机断链
+
+--mode=client
+--testbench=0:
+普通client模式,发送随机长度报文,接收返回值并校验正确性
+--testbench=1:
+随机发起链接,发送随机长度报文,接收返回值并校验正确性,随机断链
+
+
 ./rottenNut --testbench=0 --mode=server --local_agent_port_list=3000
 ./rottenNut --testbench=0 --mode=client --local_agent_port_list=3000 --len=10000000
